2012-02-07 Dario Rodriguez <dario.rodriguez@artica.es>

	* pandoradb.sql,
	extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql: Fixed an error with 
	weight field of custom graphs

2012-02-06  Ramon Novoa  <rnovoa@artica.es>

	* operation/netflow/nf_live_view.php: Fixed filter load ACL check.

2012-02-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_api.php: fixed into function "get_events__with_user"
	when try get list events when empty list of groups for user.
	
	* include/api.php: fixed the auth.

2012-02-06  Ramon Novoa  <rnovoa@artica.es>

	* operation/netflow/nf_live_view.php: Added ACL checks for filter
	  creation.

2012-02-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager.php: only added a comment for to explain
	the reason because the modules from predictionserver is erased for the
	creation policies modules. The reason is because there aren't the table
	tmodule_synth and some code to apply this kind modules in policy too.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: Removed field
	unique_id to tevento table.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php
	  operation/events/events_list.php: Show all groups in
	event view.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php
	  operation/events/events_list.php: Addes criticity info
	in event view.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>
	* godmode/events/custom_events.php: Added file.

2012-02-06  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb_data.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql: Added fields to display the event view.

	* godmode/menu.php
	  include/functions_config.php